# prism-relanno

./: .gitignore  Dockerfile  Pipfile  README-API.md  README.md  brat2xml.py  compose.yaml  entity_types.py  main.py  pyproject.toml  recover_omit.py  requirements.txt  search_docs.py  tests.py  visualise_rel.py  visualise_time.py  xml2brat.py
scripts/: brat2conll.py  match_entity.py  transport_rel_jaen.py  xml2brat.py  xml2conll.py
