[tool.poetry]
name = "prism-relanno"
version = "0.3.0"
description = "Relation data handler for PRISM annotation"
authors = ["Shuntaro Yada <contact@shuntaroy.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.3.1"
normtime = { git = "https://github.com/ku-nlp/normtime.git" }
python-dateutil = "^2.8.1"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
