[tool.poetry]
name = "prism-relanno"
version = "0.3.0"
description = "Relation data handler for PRISM annotation"
authors = ["Shuntaro Yada <contact@shuntaroy.com>"]

[tool.poetry.dependencies]
python = ">= 3.7"
fire = "^0.3.1"
normtime = { git = "https://github.com/ku-nlp/normtime.git", develop = true }
# normtime = { path = "./normtime/", develop = true }
python-dateutil = "^2.8.1"
pandas = "^1.1.5"
tqdm = "^4.56.2"
toposort = "^1.6"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pytest = "^6.1.1"
ipython = "^7.21.0"
pylint = "^2.11.1"
black = { version = "^21.9b0", allow-prereleases = true }
ipykernel = "^6.4.1"
pyment = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
